Remove usages of List.of